Fix blog section h2 alignment by adding display: block to section h2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,7 @@ section h2 {
 	margin-top: 0;
 	font-size: 2rem;
 	font-family: karmatic-arcade, sans-serif;
+	display: block;
 }
 
 /* Section paragraphs */
